# matrixportal_m4_project

./: .gitignore  CMakeLists.txt  README.md  config.h  credentials.h  deploy.bat  display_modes.h  hardware_config.h  matrix_config.cpp  matrix_display.cpp  matrix_display.h  matrixportal_m4_project.ino  ms_graph_auth.cpp  ms_graph_auth.h  platformio.ini  spotify_widget.cpp  teams_widget.cpp  teams_widget.h  weather_widget.cpp  web_server.cpp  web_server.h  widgets.cpp  widgets.h  wifi_manager.cpp  wifi_manager.h
src/: main.cpp  matrix_display.cpp  web_server.cpp  web_server.h  wifi_manager.cpp
